# Lotaria

./: .env.example  .gitignore  API_MODELS_GUIDE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  KIMI_AGENT_PROMPT.md  KIMI_RESEARCH_PROMPT.md  LOCAL_MODELS_GUIDE.md  README.md  RELEASE_NOTES_v0.1.1.md  app.py  bridge.py  lotaria_research_report.md  monitor.py  package-lock.json  package.json  requirements.txt  run.bat  vite.config.ts
.claude/: implementation-summary.md  pet-redesign-summary.md  release-notes-v0.2.0.md
.github/workflows/: release.yml
services/: __init__.py  capture.py  downloader.py  state.py  tts.py  vision.py
src/: index.html  main.ts
src-tauri/: Cargo.toml  PIPER_SETUP.md  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: capture.rs  commands.rs  lib.rs  main.rs  main_debug.rs  state.rs  tts.rs  vision.rs
ui/: index.html
