[package]
name = "lotaria"
version = "0.3.0"
description = "A desktop pet that watches your screen and roasts you"
authors = ["Lotaria"]
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-tts = "0.1"
tauri-plugin-global-shortcut = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Screen capture - cross platform
xcap = "0.4"

# Audio playback
rodio = "0.20"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding
base64 = "0.22"

# Directories
dirs = "6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# TTS - Local models
# kokoro-tiny = { version = "0.1", features = ["playback"] }  # Requires libclang, complex build
# Will implement via ONNX Runtime directly later

# Random
rand = "0.8"

# Async traits
async-trait = "0.1"

# PNG encoding
png = "0.18"

# Byte manipulation
bytemuck = "1.21"
byteorder = "1.5"

# Archive extraction
flate2 = "1.0"
tar = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
# Additional desktop-only dependencies if needed
